--- a/licensingservice/licensingservice.yml
+++ b/licensingservice/licensingservice.yml
@@ -12,4 +12,8 @@ spring.jpa.properties.hibernate.dialect: "org.hibernate.dialect.PostgreSQLDialec
 redis.server: "redis"
 redis.port: "6379"
 signing.key: "345345fsdfsf5345"
-management:endpoints:web:exposure:include: "health, env"
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*" 
