--- a/licensingservice/licensingservice.yml
+++ b/licensingservice/licensingservice.yml
@@ -9,6 +9,7 @@ spring.datasource.password: "{cipher}937ef8f20bc65ab9f23d22f7aa2112562917ffc3ad5
 spring.datasource.testWhileIdle: "true"
 spring.datasource.validationQuery: "SELECT 1"
 spring.jpa.properties.hibernate.dialect: "org.hibernate.dialect.PostgreSQLDialect"
+spring.oauth2.client.resourceserver.jwt.issuer-uri: "http://localhost:8089/auth/realms/first-auth"
 redis.server: "redis"
 redis.port: "6379"
 signing.key: "345345fsdfsf5345"
